# FPL-Modelling

./: .gitignore  LICENSE
App/: .dockerignore  Dockerfile  requirements.txt  streamlit.pem  streamlit_app.py
fpl-modelling/: README.md  pyproject.toml
fpl-modelling/conf/: logging.yml
fpl-modelling/conf/base/: globals.yml
fpl-modelling/conf/base/catalog/: catalog.yml  query_tables.yml  raw_api_tables.yml
fpl-modelling/conf/base/parameters/: model_config.yml  parameters_gameweek_points.yml  parameters_my_team.yml  strats.yml  urls.yml
fpl-modelling/conf/base/parameters/data_engineering/: bearer.yml  sqllite_db.yml  urls.yml
fpl-modelling/conf/base/parameters/data_processing/: data_processing.yml
fpl-modelling/conf/base/parameters/data_science/: model_config.yml
fpl-modelling/docs/source/: conf.py  index.rst
fpl-modelling/notebooks/: Player.py  gb_trees.csv  modelling..ipynb  most_selected_team.ipynb  new_data_processing.ipynb  next_week_info.ipynb  optimisation.py  optimizer.ipynb  test.ipynb  tutorial.ipynb
fpl-modelling/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
fpl-modelling/notebooks/catboost_info/learn/: events.out.tfevents
fpl-modelling/src/fpl_modelling/: FPL_API.py  __init__.py  __main__.py  pipeline_registry.py  settings.py
fpl-modelling/src/fpl_modelling/pipelines/data_engineering/: create_fixtures_table_nodes.py  create_fixtures_table_pipeline.py  create_player_gw_hist_table_nodes.py  create_player_gw_hist_table_pipeline.py  create_player_table_nodes.py  create_player_table_pipeline.py  create_players_teams_pos_table_nodes.py  create_players_teams_pos_table_pipeline.py  get_team_nodes.py  get_team_pipeline.py
fpl-modelling/src/fpl_modelling/pipelines/data_processing/: ExpandingDF.py  prepare_model_data_nodes.py  prepare_model_data_pipeline.py
fpl-modelling/src/fpl_modelling/pipelines/data_science/: ModelPipelineBuilder.py  data_processing_nodes.py  gameweek_prediction_nodes.py  gameweek_prediction_pipeline.py  train_model_nodes.py  train_model_pipeline.py
fpl-modelling/src/fpl_modelling/pipelines/optimisation/: BaseOptimizer.py  MostSelectedTeam.py  TeamOptimizer.py  TransferOptimizer.py  pick_optimal_team_nodes.py  pick_optimal_team_pipeline.py  pick_team_nodes.py  pick_team_pipelines.py
fpl-modelling/tests/pipelines/data_science/: test_pipeline.py
optimizer_app/: .gitignore  mlflow.db  new_test.ipynb  optimizer_app.py  pyproject.toml  test.py
optimizer_app/conf/base/: catalog.yml  parameters.yml
