[tool.poetry]
name = "fpl_modelling"
version = "0.1.0"
description = "FPL Modelling Project using Kedro and Poetry"
authors = ["Eoin Molloy <you@example.com>"]
readme = "README.md"
packages = [{ include = "src/fpl_modelling" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipython = ">=8.10"
jupyterlab = ">=3.0"
notebook = "*"
kedro = {extras=["jupyter"], version="~1.0.0"}
kedro-datasets = {extras = ["sql", "pandas"], version = "^8.1.0"}
kedro-viz = ">=6.7.0"
scikit-learn = "~=1.5.1"
seaborn = "~=0.12.1"
pulp = "*"
numpy = ">=1.26.0"  # Pin to the highest requirement
pandas = ">=2.0.0,<3.0.0"  # Pin pandas version range
streamlit = "^1.50.0"
xgboost = "^3.0.5"


[tool.poetry.group.dev.dependencies]
pytest-cov = "~3.0"
pytest-mock = ">=1.7.1,<2.0"
pytest = "~7.2"
ruff = "~0.12.0"
black = "*"
isort = "*"

[tool.poetry.scripts]
fpl-modelling = "fpl_modelling.__main__:main"

[tool.kedro]
package_name = "fpl_modelling"
project_name = "fpl_modelling"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/fpl_modelling -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201"
]
ignore = ["E501"]

[tool.kedro_telemetry]
project_id = "32a0825c2e084fadadf89ebe82b98931"
