[project]
name = "fpl_modelling"
version = "0.1.0"
description = "FPL Modelling Project using Kedro and uv"
authors = [
    { name = "Eoin Molloy", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.0.0",
    "kedro-datasets[sql,pandas]>=8.1.0,<9.0.0",
    "kedro-viz>=6.7.0",
    "scikit-learn>=1.7.2",
    "seaborn~=0.12.1",
    "pulp",
    "numpy>=1.26.0",
    "pandas>=2.0.0,<3.0.0",
    "streamlit>=1.50.0,<2.0.0",
    "xgboost>=3.0.5,<4.0.0",
    "mlflow>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1,<2.0",
    "pytest~=7.2",
    "ruff~=0.12.0",
    "black",
    "isort",
]

[project.scripts]
fpl-modelling = "fpl_modelling.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpl_modelling"]

[tool.kedro]
package_name = "fpl_modelling"
project_name = "fpl_modelling"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/fpl_modelling -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "PL",
    "T201"
]
ignore = ["E501"]

[tool.kedro_telemetry]
project_id = "32a0825c2e084fadadf89ebe82b98931"
