[project]
name = "fpl-app"
version = "0.1.0"
description = "FPL Application"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.50.0,<2.0.0",
    # Add any other app-specific dependencies here
    "scikit-learn>=1.7.2",
    "fpl-modelling",
]

[tool.uv.sources]
fpl-modelling = { path = "fpl_modelling-0.1.0-py3-none-any.whl" }

# Only needed if you plan to build this as a package
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"